# src/main/java/com/safetynet/alerts/server/services/FirestationGetServices.java
@@ -1,10 +1,14 @@
 package com.safetynet.alerts.server.services;
 
+import com.safetynet.alerts.server.constants.EObjectConstants;
+import com.safetynet.alerts.server.constants.EStatusConstants;
+import com.safetynet.alerts.server.database.entities.AddressEntity;
 import com.safetynet.alerts.server.database.entities.PersonEntity;
 import com.safetynet.alerts.server.database.repositories.PersonRepository;
 import com.safetynet.alerts.server.mapping.IFirestationMapper;
 import io.swagger.model.Firestation;
 import io.swagger.model.PersonReq;
+import io.swagger.model.StationNumber;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -16,6 +20,9 @@ public class FirestationGetServices {
 
 	@Autowired
 	public PersonRepository personRepository;
+
+
+//	private static final Logger logger = LoggerFactory.getLogger(FirestationGetServices.class);
 
 	FirestationGetServices(){}
 
@@ -45,6 +52,27 @@ public class FirestationGetServices {
 		firestationResponseBody.setChildCount(childCount);
 		firestationResponseBody.setPersons(persons);
 
+		//TODO: Add logs
+
 		return firestationResponseBody;
+	}
+
+	public StationNumber addFirestationMappingToASpecifiedAddress(Integer stationNumber, String address) {
+		StationNumber stationNumberObject = new StationNumber();
+
+		List<PersonEntity> personEntities = personRepository.findPersonEntityByAddressEntityEquals(address);
+
+		for (PersonEntity person :
+				personEntities) {
+			AddressEntity addressEntity = person.getAddressEntity();
+			addressEntity.setStation(stationNumber);
+			person.setAddressEntity(addressEntity);
+			//TODO: Add logs
+		}
+		stationNumberObject.setStationNumber(stationNumber);
+		stationNumberObject.setAddress(address);
+		stationNumberObject.setStatus(String.format(EStatusConstants.ADDED.getValue(), EObjectConstants.STATION.getObject()));
+		//TODO: Add logs
+		return stationNumberObject;
 	}
 }
